# bastion

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SESSION_SUMMARY.md  SKILL.md  chat.md  claude-session.jsonl  config.toml  demo_script.py  docker-compose.yml  netlify.toml  pnpm-lock.yaml  pnpm-workspace.yaml  prezenti-frontier-grant.md  skills-lock.json
.agents/skills/address-clustering-attribution/: SKILL.md
.agents/skills/address-screening-workflow-concepts/: SKILL.md
.agents/skills/agentskills-specification/: SKILL.md
.agents/skills/arkham-leading-crypto-analysis-tools/: SKILL.md
.agents/skills/armaniferrante-x-status-solana-reference/: SKILL.md
.agents/skills/behavioral-risk-screening-concepts/: SKILL.md
.agents/skills/bellingcat-investigation-toolkit/: SKILL.md
.agents/skills/blockchain-analytics-operations/: SKILL.md
.github/workflows/: ci.yml
apps/web/: index.html  package-lock.json  package.json
apps/web/public/: _headers  dashboard.md  (+4 more)
crates/sidecar/: Cargo.toml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx
docs/: ARCHITECTURE.md  CONTRIBUTING.md
evm/: foundry.toml
midnight/: README.md
netlify/edge-functions/: markdown-agent.js
programs/bastion-audit/: Anchor.toml  Cargo.toml
programs/bastion-audit/src/: lib.rs
sdk/: README.md  package.json
sdk/examples/: basic.ts
sdk/src/: idl.json  index.ts  types.ts
src/: lib.rs  main.rs  policy.rs  program_client.rs  simulation.rs
tests/: api_integration.rs  simulation_checks.rs  transaction_battery.rs
(+71 files in other folders)
